<?xml version="1.0"?>
<package format="2">
  <name>bolt</name>
  <version>1.0.0</version>
  <description>Interfaces to the Bolt robot.</description>
  <author email="mnaveau@tue.mpg.de">Maximilien Naveau</author>
  <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
  <license>BSD 3-clause</license>

  <!-- ROS2 build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pybind11_vendor</buildtool_depend>
  <buildtool_depend>mpi_cmake_modules</buildtool_depend>

  <depend>ament_index</depend>
  <depend>blmc_drivers</depend>
  <depend>blmc_robots</depend>
  <depend>real_time_tools</depend>
  <depend>robot_properties_bolt</depend>
  <depend>pybind11</depend>
  <depend>yaml_utils</depend>
  <depend>Eigen3</depend>


</package>
