<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bolt</name>
    <version>1.0.0</version>
    <description>Drivers and interfaces to the Bolt robot.</description>
    <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
    <license>BSD-3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>mpi_cmake_modules</depend>
    <depend>pybind11</depend>
    <depend>odri_control_interface</depend>
    <depend>slider_box</depend>
    <depend>real_time_tools</depend>
    <depend>yaml_utils</depend>
    <depend>PythonModules</depend>
    <depend>robot_properties_bolt</depend>
    <depend>dynamic_graph_manager</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>